# jpeg-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
arg/: CMakeLists.txt  arg.cpp
encode-examples/: README.md
jpeg/: CMakeLists.txt  codingbase.cpp  concepts.cpp  data.cpp  data_image.cpp  data_jpeg.cpp  data_matrix.cpp  data_tables.cpp  data_vector.cpp  decode.cpp  encode.cpp  file.cpp  file_bmp.cpp  file_jpeg.cpp  jpeg.cpp  tables.cpp
msg/: CMakeLists.txt  loglevel_static.cpp  msg.cpp
